GitVersion1/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>CAN GAT</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Close</fullName>
        </values>
        <values>
            <fullName>Create</fullName>
        </values>
        <values>
            <fullName>Discover</fullName>
        </values>
        <values>
            <fullName>Explore</fullName>
        </values>
        <values>
            <fullName>Present</fullName>
        </values>
        <values>
            <fullName>Strengthen %26 Expand</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alert_Start_Date__c</fullName>
        <defaultValue>Today ()</defaultValue>
        <label>Alert Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>CQN - Canada</fullName>
                </value>
                <value>
                    <fullName>CQN - US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSEF_Question_St_1_Eng__c</fullName>
        <defaultValue>&quot;■ What research was completed to understand the customer’s buying strategy?&quot;+ BR() +
&quot;■ What is the customer’s brand position?&quot;+ BR() +
&quot;■ Who is the executive-level Cargill contact responsible for leveraging internal Cargill resources?&quot;+ BR() +
&quot;■ What is the customer’s buying style?&quot;+ BR() +
&quot;■ What are the customer’s explicit needs?&quot;+ BR() +
&quot;■ Did you present a compelling reason to meet, based on your understanding of the customer’s explicit needs and your ability to take action and provide distinct value?&quot;+ BR() +
&quot;■ How did you gain an appointment with the customer? What did you learn about the customer during that process?&quot;</defaultValue>
        <description>1.What research was completed to understand the customer’s buying strategy?
2.What is the customer’s brand position?
3.Who is the executive-level Cargill contact responsible for leveraging internal Cargill resources?
4.What is the customer’s buying style?
5.What are the customer’s explicit needs?
6.Did you present a compelling reason to meet, based on your understanding of the customer’s explicit needs and your ability to take action and provide distinct value?
7.How did you gain an appointment with the customer? What did you learn about the customer during that process?</description>
        <label>Question St. 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSEF_Question_St_1__c</fullName>
        <defaultValue>&quot;■ Jakie badania zostały wykonane w celu zrozumienia strategii zakupowej klienta? &quot;+ BR() +
&quot;■ Jaka jest pozycja marki klienta?&quot;+ BR() +
&quot;■ Kto jest osobą kontaktową na wyższym szczeblu kierownictwa w firmie Cargill odpowiedzialną za wykorzystywanie zasobów wewnętrznych firmy Cargill?&quot;+ BR() +
&quot;■ Jaki jest styl dokonywania zakupów przez klienta?&quot;+ BR() +
&quot;■ Jakie są jasno sprecyzowane potrzeby klienta?&quot;+ BR() +
&quot;■ Czy zaprezentowałeś(-aś) ważny powód do spotkania, oparty na zrozumieniu jasno sprecyzowanych potrzeb klienta oraz umiejętności podejmowania działań i zapewnienia wyróżniającej wartości?&quot;+ BR() +
&quot;■ Jak umówiłeś(-aś) się na spotkanie z klientem? Czego dowiedziałeś(-aś) się o kliencie podczas tego procesu?&quot;</defaultValue>
        <description>■ Jakie badania zostały wykonane w celu zrozumienia strategii zakupowej klienta? 
■ Jaka jest pozycja marki klienta? 
■ Kto jest osobą kontaktową na wyższym szczeblu kierownictwa w firmie Cargill odpowiedzialną za wykorzystywanie zasobów wewnętrznych firmy Cargill? 
■ Jaki jest styl dokonywania zakupów przez klienta? 
■ Jakie są jasno sprecyzowane potrzeby klienta? 
■ Czy zaprezentowałeś(-aś) ważny powód do spotkania, oparty na zrozumieniu jasno sprecyzowanych potrzeb klienta oraz umiejętności podejmowania działań i zapewnienia wyróżniającej wartości? 
■ Jak umówiłeś(-aś) się na spotkanie z klientem? Czego dowiedziałeś(-aś) się o kliencie podczas tego procesu?</description>
        <label>CSEF Question St. 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSEF_Question_St_2_Eng__c</fullName>
        <defaultValue>&quot;■ What are the business issues and compelling needs/pain points the customer is trying to address?&quot;+BR()+ 
&quot;■ Who cares about those business issues and compelling needs/pain points? Why do they care about them?&quot;+BR()+ 
&quot;■ What does the customer expect to achieve by addressing these business issues or compelling needs/pain points?&quot;+BR()+ 
&quot;■ Why can’t they achieve them today?&quot;+BR()+ 
&quot;■ Who confirmed this need exists?&quot;+BR()+ 
&quot;■ Where does the identified need fall in terms of priority?&quot;</defaultValue>
        <description>1.What are the business issues and compelling needs/pain points the customer is trying to address?
2.Who cares about those business issues and compelling needs/pain points? Why do they care about them?
3.What does the customer expect to achieve by addressing these business issues or compelling needs/pain points?
4.Why can’t they achieve them today?
5.Who confirmed this need exists?
6.Where does the identified need fall in terms of priority?</description>
        <label>Question St. 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSEF_Question_St_2__c</fullName>
        <defaultValue>&quot;■ Jakie są zagadnienia biznesowe i nieodzowne potrzeby/słabe punkty, które klient stara się rozwiązać?&quot;+BR()+
&quot;■ Kto interesuje się tymi zagadnieniami biznesowymi i nieodzownymi potrzebami/słabymi punktami? Dlaczego interesuje się nimi?&quot;+BR()+
&quot;■ Co klient spodziewa się osiągnąć, rozwiązując te zagadnienia biznesowe lub zaspokajając nieodzowne potrzeby/eliminując słabe punkty?&quot;+BR()+
&quot;■ Dlaczego nie może osiągnąć tego dzisiaj?&quot;+BR()+
&quot;■ Kto potwierdził istnienie takiej potrzeby?&quot;+BR()+
&quot;■ Jaki priorytet ma zidentyfikowana potrzeba?&quot;</defaultValue>
        <description>■ Jakie są zagadnienia biznesowe i nieodzowne potrzeby/słabe punkty, które klient stara się rozwiązać?
■ Kto interesuje się tymi zagadnieniami biznesowymi i nieodzownymi potrzebami/słabymi punktami? Dlaczego interesuje się nimi?
■ Co klient spodziewa się osiągnąć, rozwiązując te zagadnienia biznesowe lub zaspokajając nieodzowne potrzeby/eliminując słabe punkty?
■ Dlaczego nie może osiągnąć tego dzisiaj?
■ Kto potwierdził istnienie takiej potrzeby?
■ Jaki priorytet ma zidentyfikowana potrzeba?</description>
        <label>CSEF Question St. 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSEF_Question_St_3_Eng__c</fullName>
        <defaultValue>&quot;■ What is Cargill’s unique value proposition?&quot;+BR()+
&quot;■ Who is the customer contact that has validated it?&quot;+BR()+
&quot;■ Who is Cargill’s customer coach? How do we know?&quot;+BR()+
&quot;■ What is the most important thing the customer will consider when making the purchasing decision?&quot;+BR()+
&quot;■ How have we demonstrated that our solution will help the customer achieve their business goals?&quot;+BR()+
&quot;■ What value from our solution would the customer be willing to pay for?&quot;+BR()+
&quot;■ How are we going to win?&quot;</defaultValue>
        <description>1.What is Cargill’s unique value proposition?
2.Who is the customer contact that has validated it?
3.Who is Cargill’s customer coach? How do we know?
4.What is the most important thing the customer will consider when making the purchasing decision?
5.How have we demonstrated that our solution will help the customer achieve their business goals?
6.What value from our solution would the customer be willing to pay for?
7.How are we going to win?</description>
        <label>Question St. 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSEF_Question_St_3__c</fullName>
        <defaultValue>&quot;■ Jaka jest unikatowa propozycja wartości firmy Cargill?&quot;+BR()+
&quot;■ Kto jest osobą kontaktową klienta, która to zatwierdziła?&quot;+BR()+
&quot;■ Kto jest trenerem klienta firmy Cargill? Skąd to wiadomo?&quot;+BR()+
&quot;■ Jaka jest najważniejsza rzecz, którą klient będzie brać pod uwagę przy podejmowaniu decyzji o zakupie?&quot;+BR()+
&quot;■ Jak dowiedliśmy, że nasze rozwiązanie pomoże klientowi osiągnąć jego cele biznesowe?&quot;+BR()+
&quot;■ Za którą wartość z naszego rozwiązania klient byłby gotów zapłacić?&quot;+BR()+
&quot;■ Jak zamierzamy odnieść sukces?&quot;</defaultValue>
        <description>■ Jaka jest unikatowa propozycja wartości firmy Cargill?
■ Kto jest osobą kontaktową klienta, która to zatwierdziła?
■ Kto jest trenerem klienta firmy Cargill? Skąd to wiadomo?
■ Jaka jest najważniejsza rzecz, którą klient będzie brać pod uwagę przy podejmowaniu decyzji o zakupie?
■ Jak dowiedliśmy, że nasze rozwiązanie pomoże klientowi osiągnąć jego cele biznesowe?
■ Za którą wartość z naszego rozwiązania klient byłby gotów zapłacić?
■ Jak zamierzamy odnieść sukces?</description>
        <label>CSEF Question St. 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSEF_Success_Factor_St_1_Eng__c</fullName>
        <defaultValue>&quot;STAGE 1: EXPLORE&quot;+ BR() +
&quot;■ Appointment gained with criteria — defined agenda, new/right contact level, clear goals&quot;+ BR() +
&quot;■ Preliminary zippering strategy reviewed with internal stakeholders&quot;</defaultValue>
        <description>STAGE 1: EXPLORE
Appointment gained with criteria — defined agenda, new/right contact level, clear goals
Preliminary zippering strategy reviewed with internal stakeholders</description>
        <label>Success Factor St. 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSEF_Success_Factor_St_1__c</fullName>
        <defaultValue>&quot;Etap 1: Badanie &quot;+ BR() +
&quot;■ Umówione spotkanie o  ustalonych kryteriach — określony plan działania, nowy/odpowiedni szczebel kontaktów, jasne cele&quot;+ BR() +
&quot;■ Przeanalizowana wstępna strategia zamka błyskawicznego z wewnętrznymi stronami zainteresowanymi&quot;</defaultValue>
        <description>Etap 1: Badanie 
■ Umówione spotkanie o  ustalonych kryteriach — określony plan działania, nowy/odpowiedni szczebel kontaktów, jasne cele 
■ Przeanalizowana wstępna strategia zamka błyskawicznego z wewnętrznymi stronami zainteresowanymi</description>
        <label>CSEF Success Factor St. 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSEF_Success_Factor_St_2_Eng__c</fullName>
        <defaultValue>&quot;STAGE 2: DISCOVER&quot;+ BR()+
&quot;■ Validation communication — compelling need/potential solution confirmed with customer in their language&quot;+BR()+
&quot;■ Made Go/No-go decision using checklist&quot;</defaultValue>
        <description>STAGE 2: DISCOVER
Validation communication —compelling need/potential solution confirmed with customer in their language
Made Go/No-go decision using checklist</description>
        <label>Success Factor St. 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSEF_Success_Factor_St_2__c</fullName>
        <defaultValue>&quot;Etap 2: Odkrywanie&quot;+BR() +
&quot;■ Komunikacja dotycząca zatwierdzania: potwierdzenie nieodzownej potrzeby/potencjalnego rozwiązania z klientem w jego języku&quot;+BR() +
&quot;■ Podjęcie decyzji o podjęciu działań lub powstrzymaniu się od nich na podstawie listy kontrolnej&quot;</defaultValue>
        <description>Etap 2: Odkrywanie
■ Komunikacja dotycząca zatwierdzania: potwierdzenie nieodzownej potrzeby/potencjalnego rozwiązania z klientem w jego języku
■ Podjęcie decyzji o podjęciu działań lub powstrzymaniu się od nich na podstawie listy kontrolnej</description>
        <label>CSEF Success Factor St. 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSEF_Success_Factor_St_3_Eng__c</fullName>
        <defaultValue>&quot;STAGE 3: CREATE&quot;+BR()+
&quot;■ Received verbal feedback from customer coach and developed next actions and success criteria&quot;+BR()+
&quot;■ Customer committed resources to project&quot;</defaultValue>
        <description>STAGE 3: CREATE
Received verbal feedback from customer coach and developed next actions and success criteria
Customer committed resources to project</description>
        <label>Success Factor St. 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSEF_Success_Factor_St_3__c</fullName>
        <defaultValue>&quot;Etap 3: Tworzenie&quot;+BR()+
&quot;■ Uzyskaj opinię słowną od trenera klienta oraz opracuj następne kroki działania i kryteria sukcesu&quot;+BR()+
&quot;■ Klient przydziela zasoby do projektu&quot;</defaultValue>
        <description>Etap 3: Tworzenie
■ Uzyskaj opinię słowną od trenera klienta oraz opracuj następne kroki działania i kryteria sukcesu
■ Klient przydziela zasoby do projektu</description>
        <label>CSEF Success Factor St. 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Close_Date_Actual__c</fullName>
        <description>Used for proper calculation of age - to stop calculation once the opportunity is closed. Additionally it prevents from sending reminders for closed opportunities.</description>
        <label>Actual Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Close_Date_Flag__c</fullName>
        <formula>IMAGE( IF( AND(CloseDate &lt; Today(), ISBLANK(TEXT( Won_Lost__c ))), &quot;/resource/RedFlag&quot;, &quot;/resource/GreenFlag&quot;) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditions__c</fullName>
        <label>Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contribution__c</fullName>
        <label>Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_last_email_reminder__c</fullName>
        <label>Date of last email reminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Between_Email_Alerts__c</fullName>
        <description>Number of days between email alerts</description>
        <label>Days Between Email Alerts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_remaining_until_close_date__c</fullName>
        <formula>Today() - CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days remaining until close date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_s_Don_ts__c</fullName>
        <label>Do&apos;s &amp; Don&apos;ts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_reminder_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for workflow reference</description>
        <label>Email alert sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_End_DateTime__c</fullName>
        <label>Event End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_External_Notes__c</fullName>
        <description>Stores External Notes data for the related event via CallSummaryController</description>
        <label>Event External Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Internal_Notes__c</fullName>
        <description>Stores Internal Notes data for the related event via CallSummaryController</description>
        <label>Event Internal Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Start_DateTime__c</fullName>
        <label>Event Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Subject__c</fullName>
        <label>Event Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Expense__c</fullName>
        <label>Expected Expense</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <label>Goal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IOMC__c</fullName>
        <label>IOMC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IOMM__c</fullName>
        <label>IOMM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Method_Description__c</fullName>
        <label>Method Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_First__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile First</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Animals__c</fullName>
        <label>Number of Animals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Age__c</fullName>
        <formula>IF(NOT(ISBLANK( TEXT(Won_Lost__c))), IF (NOT(ISNULL(Close_Date_Actual__c)), DATEVALUE(Close_Date_Actual__c) - DATEVALUE(CreatedDate), TODAY () - DATEVALUE(CreatedDate)) , TODAY () - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Assessment_Questions__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=015g0000001EPQl&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Assessment Questions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Resources_Needed__c</fullName>
        <label>Other Resources Needed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_won_lost_reason__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner.UserRole.Name</formula>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s_Manager_Role_Name__c</fullName>
        <formula>Owner.Manager.UserRole.Name</formula>
        <label>Owner&apos;s Manager Role Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Portfolio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Portfolio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Search_Account__c</fullName>
        <label>Search Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Step_1__c</fullName>
        <formula>TEXT(Account.Segment_Step_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment (Step 1)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <description>To hold the Segment value</description>
        <label>Species</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pork</fullName>
                </value>
                <value>
                    <fullName>Beef</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Sheep</fullName>
                </value>
                <value>
                    <fullName>Goat</fullName>
                </value>
                <value>
                    <fullName>Broiler</fullName>
                </value>
                <value>
                    <fullName>Layer</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>Ducks</fullName>
                </value>
                <value>
                    <fullName>Equine</fullName>
                </value>
                <value>
                    <fullName>Rabbit</fullName>
                </value>
                <value>
                    <fullName>Pet Food</fullName>
                </value>
                <value>
                    <fullName>Aquaculture</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Small Ruminants</fullName>
                </value>
                <value>
                    <fullName>Other Poultry</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Ingredient</fullName>
                </value>
                <value>
                    <fullName>Milk Replacers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Margin__c</fullName>
        <formula>Contribution__c * Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UOM_Volume__c</fullName>
        <label>Unit of Volume</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CFE</fullName>
                </value>
                <value>
                    <fullName>Tons</fullName>
                    <default>true</default>
                    <label>Tons</label>
                </value>
                <value>
                    <fullName>Items</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_of_Measure_Margin__c</fullName>
        <label>Unit of Contribution</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>GM</fullName>
                    <default>true</default>
                    <label>GM</label>
                </value>
                <value>
                    <fullName>IOMC</fullName>
                </value>
                <value>
                    <fullName>CCOM</fullName>
                </value>
                <value>
                    <fullName>Points</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Driver__c</fullName>
        <label>Value Driver</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IOMC</fullName>
                </value>
                <value>
                    <fullName>CCOM</fullName>
                </value>
                <value>
                    <fullName>Volume</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Won_Lost_Reason_Code__c</fullName>
        <label>Won/Lost Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Won_Lost_Reason_Comment__c</fullName>
        <label>Won/Lost Reason Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Won_Lost__c</fullName>
        <label>Won/Lost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X9_Box_Step_2__c</fullName>
        <formula>TEXT(Account.X9_Box_Step_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>9-Box (Step 2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uf__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uf__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>uf__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uf__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uf__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Close_Date_Actual__c</columns>
        <columns>Close_Date_Flag__c</columns>
        <columns>Opportunity_Age__c</columns>
        <columns>Won_Lost__c</columns>
        <columns>Volume__c</columns>
        <columns>Contribution__c</columns>
        <columns>Total_Margin__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Owner_s_Manager_Role_Name__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunities_Canada</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Close_Date_Actual__c</columns>
        <columns>Close_Date_Flag__c</columns>
        <columns>Opportunity_Age__c</columns>
        <columns>Won_Lost__c</columns>
        <columns>Volume__c</columns>
        <columns>Contribution__c</columns>
        <columns>Total_Margin__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Owner_s_Manager_Role_Name__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>All Opportunities Canada</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Canada_MasterData_DataSteward</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Opportunities_Lost</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Total_Margin__c</columns>
        <columns>Credit__c</columns>
        <columns>Price__c</columns>
        <columns>Service__c</columns>
        <columns>Performance__c</columns>
        <columns>Product_Portfolio__c</columns>
        <columns>Conditions__c</columns>
        <columns>Quality__c</columns>
        <columns>Business_Solution__c</columns>
        <columns>Other_won_lost_reason__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Won_Lost__c</field>
            <operation>equals</operation>
            <value>Lost</value>
        </filters>
        <label>All Opportunities Lost</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Poland_Superuser</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>